[gd_scene load_steps=18 format=3 uid="uid://c85fohkb2hsem"]

[ext_resource type="Script" uid="uid://cjukp6q36pbqq" path="res://scripts/input_lamp_off.gd" id="1_y6tlf"]
[ext_resource type="Texture2D" uid="uid://bk68j4lsmikno" path="res://assets/furniture/lampon.png" id="2_bqbvo"]
[ext_resource type="FontFile" uid="uid://du2qhjejgfbpx" path="res://assets/fonts/IndieFlower-Regular.ttf" id="3_vqeju"]
[ext_resource type="Texture2D" uid="uid://xy1skntcqxr0" path="res://assets/textLabels/Excelente!.png" id="4_bhlu0"]
[ext_resource type="Texture2D" uid="uid://cqreut6tmer4u" path="res://assets/environment/poppy_blow.png" id="5_bqbvo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dnoy6"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_db8ro"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_db1xo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Excelente!:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.0166666, 0.0166666)]
}

[sub_resource type="Animation" id="Animation_2f4ux"]
resource_name = "new_animation"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Excelente!:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.0166666, 0.0166666), Vector2(1, 1), Vector2(0.0166666, 0.0166666)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dnxrp"]
_data = {
&"RESET": SubResource("Animation_db1xo"),
&"anim": SubResource("Animation_2f4ux")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_vqeju"]
atlas = ExtResource("5_bqbvo")
region = Rect2(0, 0, 102, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhlu0"]
atlas = ExtResource("5_bqbvo")
region = Rect2(102, 0, 102, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnoy6"]
atlas = ExtResource("5_bqbvo")
region = Rect2(204, 0, 102, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_db8ro"]
atlas = ExtResource("5_bqbvo")
region = Rect2(306, 0, 102, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7o1t"]
atlas = ExtResource("5_bqbvo")
region = Rect2(408, 0, 102, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s35s"]
atlas = ExtResource("5_bqbvo")
region = Rect2(510, 0, 102, 105)

[sub_resource type="SpriteFrames" id="SpriteFrames_5ko0l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqeju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhlu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnoy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db8ro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7o1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s35s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="input_LampOff" type="Node2D"]
script = ExtResource("1_y6tlf")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -964.0
offset_top = -542.5
offset_right = 964.0
offset_bottom = 542.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.403922)

[node name="Lampon" type="Sprite2D" parent="."]
position = Vector2(-3, -48)
scale = Vector2(0.384943, 0.384943)
texture = ExtResource("2_bqbvo")

[node name="LineEdit" type="LineEdit" parent="."]
z_index = 2
offset_left = -106.0
offset_top = -386.0
offset_right = 42.0
offset_bottom = -304.0
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 0)
theme_override_colors/clear_button_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0.482226, 0.741199, 0.984076, 1)
theme_override_fonts/font = ExtResource("3_vqeju")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_dnoy6")
theme_override_styles/normal = SubResource("StyleBoxFlat_db8ro")
max_length = 1
metadata/_edit_use_anchors_ = true

[node name="LineEdit2" type="LineEdit" parent="."]
z_index = 3
offset_left = 39.0
offset_top = -386.0
offset_right = 187.0
offset_bottom = -304.0
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 0)
theme_override_colors/clear_button_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0.482226, 0.741199, 0.984076, 1)
theme_override_fonts/font = ExtResource("3_vqeju")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_dnoy6")
theme_override_styles/normal = SubResource("StyleBoxFlat_db8ro")
max_length = 1
metadata/_edit_use_anchors_ = true

[node name="instruction" type="Label" parent="."]
offset_left = -126.0
offset_top = -386.0
offset_right = 37.0
offset_bottom = -312.0
theme_override_fonts/font = ExtResource("3_vqeju")
theme_override_font_sizes/font_size = 50
text = "L   mpa"
metadata/_edit_use_anchors_ = true

[node name="instruction2" type="Label" parent="."]
offset_left = 85.0
offset_top = -386.0
offset_right = 224.0
offset_bottom = -312.0
theme_override_fonts/font = ExtResource("3_vqeju")
theme_override_font_sizes/font_size = 50
text = "a"
metadata/_edit_use_anchors_ = true

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(38, -325)
points = PackedVector2Array(30, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
width = 5.0
default_color = Color(0.504511, 0.920221, 1, 1)

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2(-100, -325)
points = PackedVector2Array(30, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
width = 5.0
default_color = Color(0.504511, 0.920221, 1, 1)

[node name="Excelente!" type="Sprite2D" parent="."]
position = Vector2(-11, -24)
scale = Vector2(0.0166666, 0.0166666)
texture = ExtResource("4_bhlu0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dnxrp")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-134, 164)
sprite_frames = SubResource("SpriteFrames_5ko0l")
autoplay = "default"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(123, 164)
sprite_frames = SubResource("SpriteFrames_5ko0l")
autoplay = "default"
